# zebrasend

./: .gitignore  Cargo.toml  README.md  zebrasend.toml
src/: cli.rs  config.rs  handler.rs  main.rs  sender.rs
src/cmd/: cups.rs  ftp.rs  jetdirect.rs  mod.rs  sgd.rs  zpl.rs
zpl_files/: code128_code.zpl  datamatrix_code.zpl  example_text.zpl  gs1_datamatrix_code.zpl  pdf417_code.zpl  qr_code.zpl  retail_tag.zpl  wrist_tag.zpl
