[package]
name = "zebrasend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipp = "3.0.3"
tokio = { version = "1.20.0", features = ["full"] }
clap = {version = "3.2.11", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.139" 
telnet = "0.2.1"
dirs = "4.0.0"
ftp = "3.0.1"
anyhow = "1.0.62"